--- a/app/views/contacts/new.html.haml
+++ b/app/views/contacts/new.html.haml
@@ -1,4 +1,4 @@
-%h2 Edit Client: #{@client.company.titleize}
+%h2 New Contact at #{@client.company.titleize}
 
 %ol.breadcrumb
   %li
@@ -7,9 +7,8 @@
       Home
   %li= link_to 'Clients', clients_path
   %li= link_to @client.company.titleize, client_path(@client)
-  %li.active Edit
+  %li.active New contact
 
 .row
   .col-md-6
     = render 'form'
-
