--- a/app/views/clients/_form.html.haml
+++ b/app/views/clients/_form.html.haml
@@ -8,4 +8,4 @@
     %span.glyphicon.glyphicon-floppy-disk
     Save
 
-  = link_to 'Cancel', client_path(@client), class: 'btn btn-default'
+  = link_to 'Cancel', :back, class: 'btn btn-default'
