--- a/app/views/contacts/_contacts.html.haml
+++ b/app/views/contacts/_contacts.html.haml
@@ -19,12 +19,12 @@
           - if @client.blank?
             %td= link_to c.client_company.titleize, client_path(c.client)
 
-          %td= link_to c.name.titleize, client_contact_path(c.client, c)
+          %td= link_to c.name.titleize, contact_path(c)
           %td= c.job_title
           %td= c.email
           %td= c.phone
           %td= c.account_manager
           %td.actions
-            = link_to client_contact_path(c.client, c), class: 'btn btn-default btn-xs' do
+            = link_to contact_path(c), class: 'btn btn-default btn-xs' do
               %span.glyphicon.glyphicon-eye-open
               View
