--- a/app/views/contacts/_form.html.haml
+++ b/app/views/contacts/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for [@client, @contact] do |f|
+= simple_form_for @contact do |f|
   = f.input :name, label: 'Contact Name'
   = f.input :job_title
   = f.input :email
@@ -9,4 +9,4 @@
     %span.glyphicon.glyphicon-floppy-disk
     Save
 
-  = link_to 'Cancel', client_path(@client), class: 'btn btn-default'
+  = link_to 'Cancel', :back, class: 'btn btn-default'
