--- a/app/views/contacts/_contacts.html.haml
+++ b/app/views/contacts/_contacts.html.haml
@@ -1,5 +1,5 @@
 - if @contacts.empty?
-  .well No contacts found
+  .alert.alert-info No contacts found
 - else
   %table.table.table-striped
     %thead
