--- a/app/views/clients/_form.html.haml
+++ b/app/views/clients/_form.html.haml
@@ -1,4 +1,4 @@
-
+= simple_form_for @client do |f|
   = f.input :company, label: 'Client Company'
   = f.input :email, label: 'Main Email'
   = f.input :phone, label: 'Main Phone'
