--- a/app/views/assignments/edit.html.haml
+++ b/app/views/assignments/edit.html.haml
@@ -4,3 +4,9 @@
 
     = simple_form_for @assignment do |form|
       = render 'form', form: form
+
+      %button.btn.btn-success{ type: 'submit' }
+        %span.glyphicon.glyphicon-floppy-disk
+        Save
+
+      = link_to 'Cancel', :back, class: 'btn btn-default'
