--- a/app/views/assignments/index.html.haml
+++ b/app/views/assignments/index.html.haml
@@ -1,4 +1,12 @@
 %h2
   Listing all assignments
 
+%ol.breadcrumb
+  %li
+    = link_to root_path do
+      %span.glyphicon.glyphicon-home
+      Home
+  %li.active Assignments
+
+
 = render 'assignments'
