--- a/app/views/contacts/index.html.haml
+++ b/app/views/contacts/index.html.haml
@@ -1,4 +1,12 @@
 %h2
   Listing all contacts
 
+%ol.breadcrumb
+  %li
+    = link_to root_path do
+      %span.glyphicon.glyphicon-home
+      Home
+  %li.active Contacts
+
+
 = render 'contacts'
