--- a/app/views/assignments/_assignments.html.haml
+++ b/app/views/assignments/_assignments.html.haml
@@ -32,6 +32,6 @@
           %td= a.agreement_currency
           %td= a.agreement_rate_type
           %td.actions
-            = link_to assignment_path(a), class: 'btn btn-default btn-xs' do
+            = link_to assignment_path(a), class: 'btn btn-success' do
               %span.glyphicon.glyphicon-eye-open
               View
