--- a/app/views/clients/index.html.haml
+++ b/app/views/clients/index.html.haml
@@ -34,6 +34,6 @@
           %td= c.account_manager
           %td= c.contacts.size
           %td.actions
-            = link_to client_path(c), class: 'btn btn-default btn-xs' do
+            = link_to client_path(c), class: 'btn btn-success' do
               %span.glyphicon.glyphicon-eye-open
               View
