--- a/app/views/assignments/show.html.haml
+++ b/app/views/assignments/show.html.haml
@@ -1,10 +1,6 @@
 %h2
   Assignment:
   = @assignment.title.titleize
-  - if @assignment.has_workflow?
-    = link_to assignment_workflow_path(@assignment), class: 'btn btn-default btn-success' do
-      %span.glyphicon.glyphicon-star
-      View Workflow
 
 %ol.breadcrumb
   %li
@@ -47,10 +43,11 @@
         %td.attribute Search Agreement Rate Type
         %td.value= @assignment.agreement_rate_type
 
-    - if @assignment.has_workflow?
-      = link_to edit_assignment_workflow_path(@assignment), class: 'btn btn-default btn-success' do
-        %span.glyphicon.glyphicon-pencil
-        Edit workflow
+    - if @assignment.has_workflow_stages?
+      = link_to assignment_workflow_path(@assignment), class: 'btn btn-default btn-primary' do
+        %span.glyphicon.glyphicon-star
+        View Workflow
+
     - else
       = link_to new_assignment_workflow_path(@assignment), class: 'btn btn-default btn-success' do
         %span.glyphicon.glyphicon-pencil
@@ -59,6 +56,7 @@
     = link_to edit_assignment_path(@assignment), class: 'btn btn-default btn-success' do
       %span.glyphicon.glyphicon-edit
       Edit Assignment
+
     = link_to assignment_path(@assignment), class: 'btn btn-default btn-danger', method: :delete, data: { confirm: 'Are you sure?' } do
       %span.glyphicon.glyphicon-trash
       Delete
