--- a/app/views/contacts/_contacts.html.haml
+++ b/app/views/contacts/_contacts.html.haml
@@ -25,6 +25,6 @@
           %td= c.phone
           %td= c.account_manager
           %td.actions
-            = link_to contact_path(c), class: 'btn btn-default btn-xs' do
+            = link_to contact_path(c), class: 'btn btn-success' do
               %span.glyphicon.glyphicon-eye-open
               View
