--- a/app/views/workflows/show.html.haml
+++ b/app/views/workflows/show.html.haml
@@ -17,15 +17,23 @@
 
 %ul.list-group
   - @workflow_stages.each do |s|
-    %li.list-group-item{ class: s == @assignment.current_workflow_stage ? 'list-group-item-info' : '' }
+    %li.list-group-item{ class: workflow_stage_class(s) }
       = s.name
-      - if s == @assignment.current_workflow_stage
-        %span.glyphicon.glyphicon-star
+      %span.glyphicon{ class: workflow_stage_icon(s) }
 
-= link_to complete_current_stage_assignment_workflow_path(@assignment), class: 'btn btn-success' do
-  %span.glyphicon.glyphicon-ok
-  Complete Current Stage
-= link_to cancel_current_stage_assignment_workflow_path(@assignment), class: 'btn btn-danger' do
-  %span.glyphicon.glyphicon-remove
-  Cancel Current Stage
-= link_to 'Cancel', :back, class: 'btn btn-default'
+- if @assignment.has_actionable_stages?
+  = link_to complete_current_stage_assignment_workflow_path(@assignment), class: 'btn btn-success' do
+    %span.glyphicon.glyphicon-ok
+    Complete Current Stage
+
+  = link_to cancel_current_stage_assignment_workflow_path(@assignment), class: 'btn btn-danger' do
+    %span.glyphicon.glyphicon-remove
+    Cancel Current Stage
+
+= link_to edit_assignment_workflow_path(@assignment), class: 'btn btn-default btn-success' do
+  %span.glyphicon.glyphicon-pencil
+  Edit workflow
+
+= link_to assignment_path(@assignment), class: 'btn btn-primary' do
+  %span.glyphicon.glyphicon-chevron-right
+  Go to assignment
