--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,10 +20,23 @@
             %span.icon-bar
           %a.navbar-brand{:href => root_path} Opus Pro
         .collapse.navbar-collapse
-          %ul.nav.navbar-nav
-            = highlighted_link_to 'Clients', clients_path, 'clients'
-            = highlighted_link_to 'Contacts', contacts_path, 'contacts'
-            = highlighted_link_to 'Assignments', assignments_path, 'assignments'
+          - if current_user and current_tenant
+            %ul.nav.navbar-nav
+              = highlighted_link_to 'Clients', clients_path, 'clients'
+              = highlighted_link_to 'Contacts', contacts_path, 'contacts'
+              = highlighted_link_to 'Assignments', assignments_path, 'assignments'
+
+
+          %ul.nav.navbar-nav.navbar-right
+            %li
+              - unless current_user
+                = link_to new_user_session_path do
+                  %span.glyphicon.glyphicon-user
+                  Sign in
+              - else
+                = link_to destroy_user_session_path, method: :delete do
+                  %span.glyphicon.glyphicon-log-out
+                  Sign out
 
     .container
 
